--- a/home.css
+++ b/home.css
@@ -132,6 +132,7 @@ button:hover {
     height: 550px;
     width: 100%;
     background-color: #000;
+    transition: transform 1.s ease-in-out;
 }
 
 .carousel-item img {
