--- a/home.css
+++ b/home.css
@@ -42,6 +42,8 @@ body {
     margin-top: 1.875rem;
     margin-bottom: 0.625rem;
     -webkit-text-stroke: 1px var(--cor-fundo);
+    border-top: 1.5px solid black;
+    
 }
 
 p strong {
