--- a/home.css
+++ b/home.css
@@ -209,7 +209,7 @@ button:hover {
 }
 
 .containerfotos figure {
-    background-color: #fff;
+    background-color: #81757583;
     padding: 15px 15px 50px 15px;
     display: inline-block;
     transform: rotate(-3deg);
